"use strict";
import { Model } from "sequelize";

export default (sequelize, DataTypes) => {
  class Booking extends Model {
    static associate(models) {
      Booking.belongsTo(models.Restaurant, { foreignKey: "restaurant_id" });
      Booking.belongsTo(models.RestaurantTable, { foreignKey: "table_id" });
      Booking.belongsTo(models.User, { foreignKey: "user_id" });
      Booking.hasOne(models.Payment, { foreignKey: "booking_id" });
      Booking.hasOne(models.Review, { foreignKey: "booking_id" });
    }
  }

  Booking.init(
    {
      restaurant_id: {
        type: DataTypes.BIGINT,
        allowNull: false,
      },
      table_id: DataTypes.BIGINT,
      user_id: {
        type: DataTypes.BIGINT,
        allowNull: false,
      },
      phone: {
        type: DataTypes.STRING(20),
        allowNull: false,
      },
      customer_name: {
        type: DataTypes.STRING(100),
        allowNull: false,
      },
      people_count: {
        type: DataTypes.INTEGER,
        allowNull: false,
      },
      booking_time: {
        type: DataTypes.DATE,
        allowNull: false,
      },
      status: {
        type: DataTypes.STRING,
        allowNull: false,
      },
      deposit_amount: {
        type: DataTypes.INTEGER,
        defaultValue: 0,
      },
      payment_status: {
        type: DataTypes.STRING,
        defaultValue: "NONE",
      },
      payment_provider: {
        // ZALOPAY / MOMO / VNPAY / CARD / ...
        type: DataTypes.STRING(50),
        allowNull: true,
      },
      payment_reference: {
        // mã giao dịch giả lập / code hiển thị
        type: DataTypes.STRING(255),
        allowNull: true,
      },
      paid_at: {
        // thời điểm thanh toán cọc thành công
        type: DataTypes.DATE,
        allowNull: true,
      },
      refunded_at: {
        // thời điểm hoàn tiền (nếu có)
        type: DataTypes.DATE,
        allowNull: true,
      },
      // ✅ NEW: Reminder fields
      reminder_sent_at: {
        type: DataTypes.DATE,
        allowNull: true,
      },
      reminder_type: {
        type: DataTypes.STRING(20),
        allowNull: true,
      },
      note: DataTypes.TEXT,
    },
    {
      sequelize,
      modelName: "Booking",
      tableName: "bookings",
      underscored: true,
      timestamps: true,
      createdAt: "created_at",
      updatedAt: "updated_at",
    }
  );

  return Booking;
};
