Project restaurant_booking {
  database_type: "MySQL"
}

Table users {
  id                 bigint [pk, increment]
  display_name       varchar(255)
  email              varchar(255) [note: 'UNIQUE']
  password_hash      varchar(255)
  phone              varchar(255)
  avatar_url         varchar(255)
  created_at         datetime
  updated_at         datetime
}

Table user_auth_providers {
  id                 bigint [pk, increment]
  user_id            bigint
  provider           varchar(50)
  provider_user_id   varchar(255)
  created_at         datetime
  updated_at         datetime

  indexes {
    (provider, provider_user_id) [name: 'user_auth_providers_index_0', unique]
  }
}

Table auth_tokens {
  id                 bigint [pk, increment]
  subject_id         bigint
  subject_type       varchar(50)
  token_id           varchar(255)
  type               varchar(50)
  is_revoked         boolean [default: false]
  expires_at         datetime
  created_at         datetime
  updated_at         datetime

  indexes {
    (subject_id, subject_type, type) [name: 'auth_tokens_index_1']
    token_id [name: 'auth_tokens_index_2', unique]
    expires_at [name: 'auth_tokens_index_3']
  }
}

Table restaurants {
  id                 bigint [pk, increment]
  name               varchar(255)
  address            text
  phone              varchar(255)
  description        text
  tags               varchar(255)
  search_name        varchar(255)
  search_address     varchar(255)
  search_tags        varchar(255)
  require_deposit    boolean [default: false]
  default_deposit_amount int [default: 0]
  is_active          boolean [default: true]
  average_rating     float [default: 0]
  review_count       int [default: 0]
  favorite_count     int [default: 0]
  invite_code        varchar(255) [note: 'UNIQUE code để owner/staff join']
  main_image_url     varchar(255)
  open_time          time
  close_time         time
  created_at         datetime
  updated_at         datetime
}

Table restaurant_accounts {
  id                 bigint [pk, increment]
  restaurant_id      bigint
  email              varchar(255)
  password_hash      varchar(255)
  full_name          varchar(255)
  role               varchar(50)
  status             varchar(50)
  avatar_url         varchar(255)
  created_at         datetime
  updated_at         datetime
}

Table restaurant_tables {
  id                 bigint [pk, increment]
  restaurant_id      bigint
  name               varchar(255)
  capacity           int
  location           varchar(255)
  status             varchar(50)
  view_image_url     varchar(255)
  view_note          text
  is_deleted         boolean [default: false]
  created_at         datetime
  updated_at         datetime
}

Table bookings {
  id                 bigint [pk, increment]
  restaurant_id      bigint
  table_id           bigint
  user_id            bigint
  phone              varchar(20)
  customer_name      varchar(100)
  people_count       int
  booking_time       datetime
  status             varchar(50)
  deposit_amount     int [default: 0]
  payment_status     varchar(50) [default: 'NONE']
  payment_provider   varchar(50)
  payment_reference  varchar(255)
  paid_at            datetime
  refunded_at        datetime

  reminder_send_at   datetime
  reminder_type      varchar(20)
  
  note               text
  created_at         datetime
  updated_at         datetime

  indexes {
    (restaurant_id, booking_time) [name: 'bookings_index_4']
    (user_id, booking_time) [name: 'bookings_index_5']
  }
}

Table payments {
  id                 bigint [pk, increment]
  booking_id         bigint
  amount             int
  provider           varchar(50)
  status             varchar(50)
  created_at         datetime
  updated_at         datetime
}

Table reviews {
  id                 bigint [pk, increment]
  booking_id         bigint
  restaurant_id      bigint
  user_id            bigint
  rating             int
  comment            text
  status             varchar(50) [default: 'VISIBLE']
  reply_comment      text
  reply_account_id   bigint
  reply_created_at   datetime
  reply_updated_at   datetime
  created_at         datetime
  updated_at         datetime

  indexes {
    booking_id [name: 'reviews_index_6', unique]
  }
}

Table favorite_restaurants {
  id                 bigint [pk, increment]
  user_id            bigint
  restaurant_id      bigint
  created_at         datetime

  indexes {
    (user_id, restaurant_id) [name: 'favorite_restaurants_index_7', unique]
  }
}

Table notifications {
  id                 bigint [pk, increment]
  user_id            bigint
  restaurant_id      bigint
  type               varchar(50)
  title              varchar(255)
  message            text
  channel            varchar(50) [default: 'IN_APP']
  target_type        varchar(50)
  target_id          bigint
  meta               json
  is_read            boolean [default: false]
  read_at            datetime
  created_at         datetime
  sent_at            datetime
}

Table restaurant_images {
  id                 bigint [pk, increment]
  restaurant_id      bigint
  type               varchar(50)
  file_path          varchar(255)
  is_primary         boolean [default: false]
  created_at         datetime
  updated_at         datetime
}

Table password_reset_tokens {
  id bigint [pk, increment]
  email varchar(150) [not null, note: "Email của user/account request reset"]
  subject_type varchar(50) [not null, note: "CUSTOMER (users) hoặc RESTAURANT_ACCOUNT"]
  reset_token varchar(100) [not null, unique, note: "Token để reset password (6 chữ số hoặc random string)"]
  expires_at datetime [not null, note: "Thời điểm token hết hạn (15 phút sau khi tạo)"]
  used_at datetime [note: "Thời điểm token đã được sử dụng"]
  created_at datetime [not null]
  updated_at datetime [not null]

  Indexes {
    (email) [name: "idx_password_reset_tokens_email"]
    (reset_token) [name: "idx_password_reset_tokens_token"]
    (email, subject_type, used_at) [name: "idx_password_reset_tokens_lookup"]
  }
}

Ref: user_auth_providers.user_id > users.id
Ref: restaurant_accounts.restaurant_id > restaurants.id
Ref: restaurant_tables.restaurant_id > restaurants.id
Ref: bookings.restaurant_id > restaurants.id
Ref: bookings.table_id > restaurant_tables.id
Ref: bookings.user_id > users.id
Ref: payments.booking_id > bookings.id
Ref: reviews.booking_id > bookings.id
Ref: reviews.restaurant_id > restaurants.id
Ref: reviews.user_id > users.id
Ref: reviews.reply_account_id > restaurant_accounts.id
Ref: favorite_restaurants.user_id > users.id
Ref: favorite_restaurants.restaurant_id > restaurants.id
Ref: notifications.user_id > users.id
Ref: notifications.restaurant_id > restaurants.id
Ref: restaurant_images.restaurant_id > restaurants.id
